# NASAWallpaperBot

./: .gitignore  README.md  apod_wallpaper.sh  pyproject.toml  wallpaper_bot.sh
apod_wallpaper/: main.py
nasa_wallpaper_bot/: main.py
