[tool.poetry]
name = "nasa_wallpaper_bot"
version = "0.1.0"
description = ""
authors = ["Harry <harrycaira@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
appscript = "^1.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wallpaper_bot = 'nasa_wallpaper_bot.main:main'