[tool.poetry]
name = "apod_wallpaper"
version = "0.1.0"
description = ""
authors = ["Harry <harrycaira@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
appscript = "^1.2.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
apod_wallpaper = 'apod_wallpaper.main:main'